[package]
name = "dither"
version = "1.3.10"

authors = ["Efron Licht <efron.python@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A ditherer for static images with a variety of color palettes"
repository= "https://gitlab.com/efronlicht/dither"
readme = "readme.md"
[dependencies]
clap = { version = "3.1.9", features = ["derive"] }

image = "0.23"
[dev-dependencies]
