[package]
name = "dither"
version = "1.3.10"

authors = [
    "Efron Licht <efron.python@gmail.com>",
    "Amanda Stjerna <amanda@stjerna.space>",
]
edition = "2018"
license = "MIT"
description = "A ditherer for static images with a variety of color palettes"
repository = "https://gitlab.com/efronlicht/dither"
readme = "readme.md"


[workspace]
[dependencies]
libdither = { path = "libdither" }
clap = { version = "3.1.9", features = ["derive"] }
